--- a/static/index.html
+++ b/static/index.html
@@ -31,31 +31,9 @@
 <body>
     <div class="jumbotron">
         <div class="container">
-            <h1>Welcome to gladius!</h1>
+            <h1>Welcome to Gladius!</h1>
             <hr>
-            <p>If you see this page, the default mount point for serving static files is working. Further configuration is required.</p>
-            <ol>
-                <li>
-                    <h5>Run <span class="code">gladius</span> with -h for detailed usage:</h5>
-                    <pre>
-$ gladius -h
-
-  Usage: gladius [options]
-  
-  Options:
-    -m, --mount [&lt;url&gt;:]&lt;path&gt;  set the mount point for serving static files (default: /static:static)</pre>
-                </li>
-                <li>
-                    <h5>Specify a mount path for the static directory, as shown below:</h5>
-                    <pre>$ gladius -m /static:/path/to/your/static/files</pre>
-                </li>
-            </ol>
-            <hr>
-            <p>The example shown below is a tiny web interface for small size LCD display 320x240 with very limited features.<br>Visit <span class="code">http://localhost:8000/pendant/</span> after running the command:</p>
-            <pre>$ gladius -m /pendant:/path/to/tinyweb</pre>
-            <hr>
-            <p>For online documentation please refer to <a href="https://cnc.js.org/docs">https://cnc.js.org/docs</a>.</p>
-            <p><a class="btn btn-primary btn-lg" href="https://github.com/gladius/gladius" role="button">Learn more »</a></p>
+            <p><a class="btn btn-primary btn-lg" href="https://github.com/Zealandia-Systems/Gladius" role="button">Learn more »</a></p>
         </div>
     </div>
 </body>
